--- a/Notebooks/Manuscripts_analysis.ipynb
+++ b/Notebooks/Manuscripts_analysis.ipynb
@@ -36,7 +36,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# lets start by getting the data\n",
@@ -70,7 +72,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Get data line by line from tmdb-5000-movie-database and save the data as dictionary\n",
@@ -89,7 +93,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Get data line by line from tmdb-5000-movie-database and save the data as dictionary\n",
@@ -113,7 +119,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# There are some movies that either did not have imdb rating or had some information missing from the kaggle database.\n",
@@ -137,7 +145,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for movie in movies_to_delete:\n",
@@ -162,7 +172,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "filepath_scripts =  \"scripts/\"\n",
@@ -194,7 +206,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "manuscripts_intersection = [key for key,value in manuscripts.items() if value == True]"
@@ -228,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "movies_with_manuscripts = [(key, tmdb_5000_movies[key][\"release_date\"].split(\"-\")[0] ) \n",
@@ -285,7 +301,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
@@ -310,7 +328,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -348,6 +368,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -403,7 +424,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "result_file_uri = \"happiness-score.json\"\n",
@@ -429,7 +452,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y, x = np.histogram(list(happiness_score.values()),100)"
@@ -782,7 +807,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# We use the fact that we know that each movie has a name, so we do not include any error handling\n",
@@ -892,7 +919,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# visualize the the 10 highest and lowest ranked movies (that we have in our manuscript database) \n",
@@ -1175,7 +1204,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Find the average sentiment value for each genre\n",
@@ -1348,7 +1379,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "directors_happiness = defaultdict(list)\n",
@@ -1361,7 +1394,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "directors_happiness_sorted = sorted([(directors, np.mean(values)) for directors,values in directors_happiness.items() if len(values) > 3], \n",
@@ -1484,7 +1519,7 @@
     "### Procedure\n",
     "The **procedure** can be described as follows\n",
     "- First we collect each manuscript that is a part of each genre. We then preprocess the text by eliminating stop words and some additional words that we found out that where not important but skewed the results (words that are not part of the storyline but are words that have special meaning in manuscripts, like for example the word playbill). We then tokenized each manuscript with the nltk.regexp_tokenizer. After that we combined the tokens into one long string of tokens.  We then combine each genre's preprocessed manuscript into one huge text file. Therefore we will end up with one huge textfile for each genre. \n",
-    "- Next, we calculate the TF-IDF to figure out what words are important for each genre. We choose to use the TfidfVectorizer from sci kit learn module to implement the TF-IDF matrix for these 6 huge files. \n",
+    "- Next, we calculate the TF-IDF to figure out what words are important for each genre. We choose to use the TfidfVectorizer from sci kit learn module to implement the TF-IDF matrix for these 17 huge files. \n",
     "- Then we create a word cloud based on the TF-IDF matrix. "
    ]
   },
@@ -1499,13 +1534,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First thing to do is to get all of the movies that is associated with each genre and create a huge file for each genre that contains all of the movie scripts associated with that genre. Note that some manuscripts have more than one genre so there will be some intersection between these 11 huge files, we tried a couple of methods but this method produced the best result."
+    "First thing to do is to get all of the movies that is associated with each genre and create a huge file for each genre that contains all of the movie scripts associated with that genre. Note that some manuscripts have more than one genre so there will be some intersection between these 17 huge files, we tried a couple of methods but this method produced the best result."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "filepath_scripts =  \"scripts/\"\n",
@@ -1572,7 +1609,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# get the text into a list of texts\n",
@@ -1596,7 +1635,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def getWordStringForGenre(TF_IDF_Vector):\n",
@@ -1696,7 +1737,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "genres_keywords = defaultdict(list)\n",
@@ -1843,14 +1886,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
