some changes to the manuscripts analysis

--- a/Notebooks/explainer_notebook.ipynb
+++ b/Notebooks/explainer_notebook.ipynb
@@ -117,11 +117,28 @@
     "\n",
     "Like we have mentioned here above our main idea was to creata a movie recommendation engine using graph theory and text analysis. We have already talked about how we managed to get our dataset and know we will focuse on the analysis part of the assignment. The analysis part can be divided into four parts; Basic statistics, Text analysis, Network analysis and then finally we donate a whole section to the final version of our recommendation engine. We did a lot of work in this assignment and therefore we divided the analysing work into 5 different notebooks, each notebook is well commented and we tried to include some conclusions for each part. \n",
     "\n",
+    "\n",
+    "explain what you're interested in\n",
+    "explain the tool\n",
+    "apply the tool\n",
+    "discuss the outcome\n",
+    "\n",
+    "\n",
     "## Basic statistics\n",
     "\n",
     "\n",
     "\n",
     "## Text analysis\n",
+    "\n",
+    "** The idea **\n",
+    "\n",
+    "The idea was to get manuscripts and reviews for majority of the movies in our Kaggle dataset and to both a similarity measurement between each pair of manuscripts and calculate the mean sentiment value of each manuscript as well as the variance of the sentiment values. The similarity measures give us valuable information about how alike two movies are and the sentiment values gives us information about the vocabulary used in each movie, how happy on average the manuscript is and also how much of an \n",
+    "\n",
+    "** Tools **\n",
+    "\n",
+    "** Outcome **\n",
+    "\n",
+    "We quickly figure \n",
     "\n",
     "## Network analysis\n",
     "\n",
