--- a/Notebooks/Manuscripts_analysis.ipynb
+++ b/Notebooks/Manuscripts_analysis.ipynb
@@ -28,9 +28,12 @@
     "  - Is there a correlation between imdb ranking and happiness rank?\n",
     "  - Is there a correlation between movie revenue and happiness rank? \n",
     "  - Is there a difference in a happiness rank between different movie's genres?\n",
+    "  - Is there a difference in the variance of the sentiment values between different movie's genres?\n",
     "  - What directors direct the 'happiest' movies on average and what directors direct 'unhappiest' movies on average?\n",
     "  - Use TF/IDF to figure out what words are important for each genre and then visualize that in a wordcloud.\n",
-    "  - Use a wordcloud to visualize the keywords for each genre of movies, remember that the Kaggle database provides information about keywords for each movie in the database."
+    "  - Use a wordcloud to visualize the keywords for each genre of movies, remember that the Kaggle database provides information about keywords for each movie in the database.\n",
+    "  \n",
+    "  **Note:**  Happiness rank means the mean sentiment value of the manuscript"
    ]
   },
   {
@@ -217,7 +220,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -256,7 +261,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -464,6 +471,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -517,7 +525,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -581,6 +591,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -643,7 +654,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -690,7 +703,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -821,7 +836,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -864,7 +881,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -956,7 +975,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1070,7 +1091,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1140,7 +1163,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1225,6 +1250,7 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -1408,7 +1434,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1661,6 +1689,7 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -1776,7 +1805,9 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1829,6 +1860,7 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -1879,21 +1911,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:py35]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-py35-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
