--- a/Notebooks/Sentiment_reviews.ipynb
+++ b/Notebooks/Sentiment_reviews.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "In this notebook we will look at sentimental analysis of user reviews from IMDb:\n",
     "* We have 13635 reviews for the 1304 movies that were common between our dataset and the dataset that contained the reviews.\n",
-    "* The original reviews dataset is available [here.](http://ai.stanford.edu/~amaas/data/sentiment/) It contains 100.000 reviews from IMDb. [Citation needed.](http://ai.stanford.edu/~amaas/papers/wvSent_acl2011.bib)\n",
+    "* The original reviews dataset is available [here.](http://ai.stanford.edu/~amaas/data/sentiment/) It contains 100.000 reviews from IMDb. [Citation.](http://ai.stanford.edu/~amaas/papers/wvSent_acl2011.bib)\n",
     "* We will plot the sentimental score of the reviews for our movies, we will also plot the sentimental score of a movie against the IMDb rating of said movie and check if there is any correlation."
    ]
   },
@@ -323,7 +323,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Here we loop through each file and collect the review text in a dictionary where the key is\n",
@@ -397,7 +399,9 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# counter to count the number of lines that have been processed\n",
@@ -447,7 +451,9 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#We want to calculate average sentiment score of all reviews for a movie and also store the result in a dictionary\n",
@@ -645,7 +651,9 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "imdb_rating = {}\n",
@@ -765,7 +773,9 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#We want to calculate average sentiment score of all reviews for a movie and also store the result in a dictionary\n",
