explainer notebook changes

--- a/Notebooks/explainer_notebook.ipynb
+++ b/Notebooks/explainer_notebook.ipynb
@@ -118,27 +118,69 @@
     "Like we have mentioned here above our main idea was to creata a movie recommendation engine using graph theory and text analysis. We have already talked about how we managed to get our dataset and know we will focuse on the analysis part of the assignment. The analysis part can be divided into four parts; Basic statistics, Text analysis, Network analysis and then finally we donate a whole section to the final version of our recommendation engine. We did a lot of work in this assignment and therefore we divided the analysing work into 5 different notebooks, each notebook is well commented and we tried to include some conclusions for each part. \n",
     "\n",
     "\n",
-    "explain what you're interested in\n",
-    "explain the tool\n",
-    "apply the tool\n",
-    "discuss the outcome\n",
-    "\n",
-    "\n",
     "## Basic statistics\n",
     "\n",
     "\n",
     "\n",
     "## Text analysis\n",
     "\n",
-    "** The idea **\n",
+    "#### The idea \n",
     "\n",
-    "The idea was to get manuscripts and reviews for majority of the movies in our Kaggle dataset and to both a similarity measurement between each pair of manuscripts and calculate the mean sentiment value of each manuscript as well as the variance of the sentiment values. The similarity measures give us valuable information about how alike two movies are and the sentiment values gives us information about the vocabulary used in each movie, how happy on average the manuscript is and also how much of an \n",
+    "The idea was to get manuscripts and reviews for majority of the movies in our Kaggle dataset and to both a similarity measurement between each pair of manuscripts and calculate the mean sentiment value of each manuscript as well as the variance of the sentiment values. The similarity measures give us valuable information about how alike two movies are and the sentiment values gives us information about the vocabulary used in each movie, how happy on average the manuscript is and also how much of an contrast there is between usage of happy words and unhappy words there is in each movie's manuscript\n",
     "\n",
-    "** Tools **\n",
+    "#### Tools\n",
     "\n",
-    "** Outcome **\n",
+    "**Sentiment analysis:** We used the happyness rank from the LabMT wordlist to analyse the sentiment values for each manuscript. It's available as supplementary material from Temporal Patterns of Happiness and Information in a Global Social Network: Hedonometrics and Twitter (Data Set S1). It can be accessed on the [this link](http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0026752#s2). The article has information about how the sentiment value is calculated for a text and how the dataset was created. \n",
     "\n",
-    "We quickly figure \n",
+    "We calculated the sentiment score in two different analysis. Firstly in the manuscript analyses where we analysed the sentiment score of the manuscripts and in the review analysis where we analysed the sentiment scores of movie's reviews.\n",
+    "\n",
+    "**TF-IDF: ** The TF-IDF - Term frequency - inverse document frequency is a numerical statistics of how important a word is to a document in a collection or corpus. It is calculated by calculating the frequency of occurrences of a word in a text multiplied with the inverse document frequency which gives lower scores to words that frequencty occurres in other text in the corpus as well. In other words, TF-IDF is an indicator of how important/special a word is actually in a text, giving high scores to the words that differentiates it from other texts. \n",
+    "\n",
+    "We used TF-IDF in two different analysis; First in the **manuscripts analysis** where we calculated the TF-IDF vector for each movie's genre and we used that to make wordclouds which correlated the TF-IDF score of a word with the size of the word in the wordcloud. Secondly, we calculated TF-IDF for each movie's IMDb storyline. We the used the resulting vectors to calculate the cosine similarity measurement between the movie's storyline and we used that as a variable into our recommendation engine like we will go over in the Recommendation part section.\n",
+    "\n",
+    "#### Applications\n",
+    "\n",
+    "** Manuscripts analysis ** - [Manuscripts_analysis notebook](https://github.com/gretarg09/Dtu-SocialGraphs-FinalProject/blob/master/Notebooks/Manuscripts_analysis.ipynb)\n",
+    "\n",
+    "Like we have discussed here above we manage to gather 715 manuscripts that intersects with our Kaggle database (manuscript for the movies in our Kaggle database). Because we did not manage to find manuscripts for each movie we consider these analysis to be a proof of consept. Proof of consept in the way that we wanted to find out if we could find some informations that would help to improve our recommendation engine. It is also just a fun and interesting thing to analyse these manuscripts and in the [Manuscripts_analysis notebook](https://github.com/gretarg09/Dtu-SocialGraphs-FinalProject/blob/master/Notebooks/Manuscripts_analysis.ipynb) we tried to answer the following questions\n",
+    "\n",
+    "  - How is the happiness rank distribution of these manuscripts?\n",
+    "  - What are the 10 'unhappiest manuscripts' and what are the 10 'happiest  manuscripts'?\n",
+    "  - Is there a correlation between imdb ranking and happiness rank?\n",
+    "  - Is there a correlation between movie revenue and happiness rank? \n",
+    "  - Is there a difference in a happiness rank between different movie's genres?\n",
+    "  - Is there a difference in the variance of the sentiment values between different movie's genres?\n",
+    "  - What directors direct the 'happiest' movies on average and what directors direct 'unhappiest' movies on average?\n",
+    "  - Use TF/IDF to figure out what words are important for each genre and then visualize that in a wordcloud.\n",
+    "  - Use a wordcloud to visualize the keywords for each genre of movies, remember that the Kaggle database provides information about keywords for each movie in the database.\n",
+    "  \n",
+    "  **Note:**  Happiness rank means the mean sentiment value of the manuscript\n",
+    "\n",
+    "The Manuscripts Analysis notebook is well commented and there is a lot of discussions and conclusions in there that should be interesting to look at. We encourage the reader to go over the notebook. \n",
+    "\n",
+    "** Reviews analysis ** - [Sentiment_reviews notebook](https://github.com/gretarg09/Dtu-SocialGraphs-FinalProject/blob/master/Notebooks/Sentiment_reviews.ipynb)\n",
+    "\n",
+    "In this notebook we looked at sentimental analysis of user reviews from IMDb:\n",
+    " - We have 13635 reviews for the 1304 movies that were common between our dataset and the dataset that contained the reviews.\n",
+    " - The original reviews dataset is available [here](http://ai.stanford.edu/~amaas/data/sentiment/). It contains 100.000 reviews from IMDb.\n",
+    " - In this notebook we did the following:\n",
+    "     - We plotted the sentimental score distribution of the reviews for our movies.\n",
+    "     - We plotted the sentimental score of the movies against the IMDb rating of said movie and check if there is any correlation.\n",
+    "\n",
+    "** Note ** Sentiment score is the same as happyness score which is the same as mean sentiment value. It is important to have this in mind when you go over the analysis in the notebooks.\n",
+    "\n",
+    "** Recommendation engine ** - [recommendation_engine notebook](https://github.com/gretarg09/Dtu-SocialGraphs-FinalProject/blob/master/Notebooks/recommendation_engine.ipynb)\n",
+    "\n",
+    "Here we did a similarity measures on the IMDb storyline using the TF-IDF and cosine similarity measurement. We will discuss this notebook further in the Recommendation Engine section.\n",
+    "\n",
+    "#### Outcome\n",
+    "\n",
+    "The work that we did can be found in the previously mentioned notebooks. We incourage you to scan throught the notebooks and check out our work, each notebook contains a conclusion part where we summerize the findings. We will only discuss a part of the outcomes here down below because it would take to much space and time to go over it all. \n",
+    "\n",
+    "Like we have mentioned previously out intention was to use the text analysis on the manuscripts and the reviews to improve our recommendation engine. But because we failed in finding manuscripts and reviews for majority of our movies we decited to not include it in the recommendation engine but what we did instead is to scrape the movies' storylines from IMDb and use similarity measures on them as a variable into our recommendation engine which resulted in a improved recommendation engine. \n",
+    "\n",
+    "That being said, we wanted to do some analysis on the manuscripts and the reviews. We looked at this part as a sort of a proof of consepts, we wanted to see if there where some interesting information to be found and furthermore see if the information could be used to improve our recommendation engine if we could get our hands on reviews and manuscript for majority of the movies. Our main focus was on the manuscript part but we also did a some interesting analysis on the reviews. The \n",
+    "\n",
     "\n",
     "## Network analysis\n",
     "\n",
