Added the last part about individual reviews

--- a/Notebooks/Sentiment_reviews.ipynb
+++ b/Notebooks/Sentiment_reviews.ipynb
@@ -14,7 +14,8 @@
     "In this notebook we will look at sentimental analysis of user reviews from IMDb:\n",
     "* We have 13635 reviews for the 1304 movies that were common between our dataset and the dataset that contained the reviews.\n",
     "* The original reviews dataset is available [here.](http://ai.stanford.edu/~amaas/data/sentiment/) It contains 100.000 reviews from IMDb. [Citation.](http://ai.stanford.edu/~amaas/papers/wvSent_acl2011.bib)\n",
-    "* We will plot the sentimental score of the reviews for our movies, we will also plot the sentimental score of a movie against the IMDb rating of said movie and check if there is any correlation."
+    "* We will plot the sentimental score of the reviews for our movies, we will also plot the sentimental score of a movie against the IMDb rating of said movie and check if there is any correlation.\n",
+    "* Lastly we will check the correlation of the sentimental score of a review and the reviewer's rating of the movie, this part will use all reviews that have a rating (50.000 reviews)."
    ]
   },
   {
