A bit of cleaning, networks done from my part - please read over it

--- a/Notebooks/recommendation_engine.ipynb
+++ b/Notebooks/recommendation_engine.ipynb
@@ -164,6 +164,7 @@
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -229,7 +230,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# lets build the second network\n",
@@ -806,7 +809,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "movies_in_network = []\n",
@@ -827,7 +832,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# get the imdb scores\n",
@@ -897,7 +904,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for first_movie in need_more_recommendations:\n",
@@ -924,7 +933,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open('search_results3.json', 'w') as fp:\n",
@@ -942,7 +953,9 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Get data line by line from tmdb-5000-movie-database and save the data as list\n",
