some minor changes to the manuscript notebook

--- a/Notebooks/explainer_notebook.ipynb
+++ b/Notebooks/explainer_notebook.ipynb
@@ -138,6 +138,8 @@
     "\n",
     "We used TF-IDF in two different analysis; First in the **manuscripts analysis** where we calculated the TF-IDF vector for each movie's genre and we used that to make wordclouds which correlated the TF-IDF score of a word with the size of the word in the wordcloud. Secondly, we calculated TF-IDF for each movie's IMDb storyline. We the used the resulting vectors to calculate the cosine similarity measurement between the movie's storyline and we used that as a variable into our recommendation engine like we will go over in the Recommendation part section.\n",
     "\n",
+    "**NOTE** We used the TfidfVectorizer function in the python module sklearn.feature_extraction.text to calculate the TF-IDF vectors.\n",
+    "\n",
     "#### Applications\n",
     "\n",
     "** Manuscripts analysis ** - [Manuscripts_analysis notebook](https://github.com/gretarg09/Dtu-SocialGraphs-FinalProject/blob/master/Notebooks/Manuscripts_analysis.ipynb)\n",
@@ -166,6 +168,7 @@
     " - In this notebook we did the following:\n",
     "     - We plotted the sentimental score distribution of the reviews for our movies.\n",
     "     - We plotted the sentimental score of the movies against the IMDb rating of said movie and check if there is any correlation.\n",
+    "     - Lastly we analysed the correlation of the sentimental score of a review and the reviewer's rating of the movie, this part will use all reviews that have a rating (50.000 reviews).\n",
     "\n",
     "** Note ** Sentiment score is the same as happyness score which is the same as mean sentiment value. It is important to have this in mind when you go over the analysis in the notebooks.\n",
     "\n",
@@ -179,7 +182,13 @@
     "\n",
     "Like we have mentioned previously out intention was to use the text analysis on the manuscripts and the reviews to improve our recommendation engine. But because we failed in finding manuscripts and reviews for majority of our movies we decited to not include it in the recommendation engine but what we did instead is to scrape the movies' storylines from IMDb and use similarity measures on them as a variable into our recommendation engine which resulted in a improved recommendation engine. \n",
     "\n",
-    "That being said, we wanted to do some analysis on the manuscripts and the reviews. We looked at this part as a sort of a proof of consepts, we wanted to see if there where some interesting information to be found and furthermore see if the information could be used to improve our recommendation engine if we could get our hands on reviews and manuscript for majority of the movies. Our main focus was on the manuscript part but we also did a some interesting analysis on the reviews. The \n",
+    "That being said, we wanted to do some analysis on the manuscripts and the reviews. We looked at this part as a sort of a proof of consepts, we wanted to see if there where some interesting information to be found and furthermore see if the information could be used to improve our recommendation engine. Therefore proof the concept and ,in future work, if we could get our hands on reviews and manuscript for majority of the movies we could easily use the information as a input into our recommendation engine. Our main focus was on the manuscript part but we also did a some interesting analysis on the reviews. We will only discuss the finding in the moviescript analysis here but we encourage you to take a look a the reviews analysis. \n",
+    "\n",
+    "We found out that both the mean sentiment value of a movie's manuscript and the variance of the sentiment values of the movie's manuscripts provide useful information about what kind of a movie we are talking about. For example if the mean sentiment value is high then the movie is most likely a so called 'feel good movie' and we could recommend movies that have similar mean sentiment values. Likewise we have discussed how the variance of the sentiments give a valuable information about the movie, if the variance is high then there is a lot of contradictions in the storyline meaning for example that the movie is either a dark movie that has some happy moments in it (romance or comedy) or that the movie is a dark comedy (e.g Deadpool).\n",
+    "\n",
+    "We also found out that the most happy movie genres on average (based on the sentiment analysis) is are Music, Romance and Comedy and the most  \"unhappy\" genres are Action and Horror. \n",
+    "\n",
+    "We \n",
     "\n",
     "\n",
     "## Network analysis\n",
