--- a/Notebooks/explainer_notebook.ipynb
+++ b/Notebooks/explainer_notebook.ipynb
@@ -124,11 +124,11 @@
     "\n",
     "## Text analysis\n",
     "\n",
-    "#### The idea \n",
+    "### The idea \n",
     "\n",
     "The idea was to get manuscripts and reviews for majority of the movies in our Kaggle dataset and to both a similarity measurement between each pair of manuscripts and calculate the mean sentiment value of each manuscript as well as the variance of the sentiment values. The similarity measures give us valuable information about how alike two movies are and the sentiment values gives us information about the vocabulary used in each movie, how happy on average the manuscript is and also how much of an contrast there is between usage of happy words and unhappy words there is in each movie's manuscript\n",
     "\n",
-    "#### Tools\n",
+    "### Tools\n",
     "\n",
     "**Sentiment analysis:** We used the happyness rank from the LabMT wordlist to analyse the sentiment values for each manuscript. It's available as supplementary material from Temporal Patterns of Happiness and Information in a Global Social Network: Hedonometrics and Twitter (Data Set S1). It can be accessed on the [this link](http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0026752#s2). The article has information about how the sentiment value is calculated for a text and how the dataset was created. \n",
     "\n",
@@ -140,7 +140,7 @@
     "\n",
     "**NOTE** We used the TfidfVectorizer function in the python module sklearn.feature_extraction.text to calculate the TF-IDF vectors.\n",
     "\n",
-    "#### Applications\n",
+    "### Applications\n",
     "\n",
     "** Manuscripts analysis ** - [Manuscripts_analysis notebook](https://github.com/gretarg09/Dtu-SocialGraphs-FinalProject/blob/master/Notebooks/Manuscripts_analysis.ipynb)\n",
     "\n",
@@ -176,24 +176,56 @@
     "\n",
     "Here we did a similarity measures on the IMDb storyline using the TF-IDF and cosine similarity measurement. We will discuss this notebook further in the Recommendation Engine section.\n",
     "\n",
-    "#### Outcome\n",
+    "### Outcome\n",
     "\n",
-    "The work that we did can be found in the previously mentioned notebooks. We incourage you to scan throught the notebooks and check out our work, each notebook contains a conclusion part where we summerize the findings. We will only discuss a part of the outcomes here down below because it would take to much space and time to go over it all. \n",
+    "The work that we did can be found in the previously mentioned notebooks. We encourage you to scan through the notebooks and check out our work, each notebook contains a conclusion part where we summarize the findings. We will only discuss a part of the outcomes here down below because it would take to much space and time to go over it all. \n",
     "\n",
-    "Like we have mentioned previously out intention was to use the text analysis on the manuscripts and the reviews to improve our recommendation engine. But because we failed in finding manuscripts and reviews for majority of our movies we decited to not include it in the recommendation engine but what we did instead is to scrape the movies' storylines from IMDb and use similarity measures on them as a variable into our recommendation engine which resulted in a improved recommendation engine. \n",
+    "Like we have mentioned previously out intention was to use the text analysis on the manuscripts and the reviews to improve our recommendation engine. But because we failed in finding manuscripts and reviews for majority of our movies we decided to not include it in the recommendation engine but what we did instead is to scrape the movies' story lines from IMDb and use similarity measures on them as a variable into our recommendation engine which resulted in a improved recommendation engine. \n",
     "\n",
-    "That being said, we wanted to do some analysis on the manuscripts and the reviews. We looked at this part as a sort of a proof of consepts, we wanted to see if there where some interesting information to be found and furthermore see if the information could be used to improve our recommendation engine. Therefore proof the concept and ,in future work, if we could get our hands on reviews and manuscript for majority of the movies we could easily use the information as a input into our recommendation engine. Our main focus was on the manuscript part but we also did a some interesting analysis on the reviews. We will only discuss the finding in the moviescript analysis here but we encourage you to take a look a the reviews analysis. \n",
+    "That being said, we wanted to do some analysis on the manuscripts and the reviews. We looked at this part as a sort of a proof of concepts, we wanted to see if there where some interesting information to be found and furthermore see if the information could be used to improve our recommendation engine. Therefore proof the concept and ,in future work, if we could get our hands on reviews and manuscript for majority of the movies we could easily use the information as a input into our recommendation engine. Our main focus was on the manuscript part but we also did a some interesting analysis on the reviews. We will only discuss the finding in the manuscript analysis here but we encourage you to take a look a the reviews analysis. \n",
     "\n",
-    "We found out that both the mean sentiment value of a movie's manuscript and the variance of the sentiment values of the movie's manuscripts provide useful information about what kind of a movie we are talking about. For example if the mean sentiment value is high then the movie is most likely a so called 'feel good movie' and we could recommend movies that have similar mean sentiment values. Likewise we have discussed how the variance of the sentiments give a valuable information about the movie, if the variance is high then there is a lot of contradictions in the storyline meaning for example that the movie is either a dark movie that has some happy moments in it (romance or comedy) or that the movie is a dark comedy (e.g Deadpool).\n",
+    "We found out that both the mean sentiment value of a movie's manuscript and the variance of the sentiment values of the movie's manuscripts provide useful information about what kind of a movie we are talking about. For example if the mean sentiment value is high then the movie is most likely a so called 'feel good movie' and we could recommend movies that have similar mean sentiment values. Likewise we have discussed how the variance of the sentiments give a valuable information about the movie, if the variance is high then there is a lot of contradictions in the story line meaning for example that the movie is either a dark movie that has some happy moments in it (romance or comedy) or that the movie is a dark comedy (e.g Deadpool).\n",
     "\n",
-    "We also found out that the most happy movie genres on average (based on the sentiment analysis) is are Music, Romance and Comedy and the most  \"unhappy\" genres are Action and Horror. \n",
+    "We also found out that the most happy movie genres on average (based on the sentiment analysis) are Music, Romance and Comedy and the most  \"unhappy\" genres are Action and Horror. \n",
     "\n",
-    "We \n",
+    "And we did a lot more than what we have discussed here, the information and discussion can be found in the notebook. The decisions taken about preprocessing and datacleaning can also be found before each appropriate part. \n",
     "\n",
     "\n",
     "## Network analysis\n",
     "\n",
-    "## Recommendation engine\n"
+    "### The idea\n",
+    "\n",
+    "**TODO**\n",
+    "\n",
+    "### Tools\n",
+    "\n",
+    "**TODO**\n",
+    "\n",
+    "### Applications\n",
+    "\n",
+    "**TODO**\n",
+    "\n",
+    "### Outcome\n",
+    "\n",
+    "**TODO**\n",
+    "\n",
+    "## Recommendation engine\n",
+    "\n",
+    "**TODO**\n",
+    "\n",
+    "### The idea\n",
+    "\n",
+    "**TODO**\n",
+    "\n",
+    "### Tools\n",
+    "\n",
+    "**TODO**\n",
+    "\n",
+    "### Applications\n",
+    "\n",
+    "**TODO**\n",
+    "\n",
+    "### Outcome "
    ]
   },
   {
@@ -228,6 +260,15 @@
    "metadata": {},
    "source": [
     "############################################################################################################"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Tf%E2%80%93idf"
    ]
   },
   {
