--- a/Notebooks/Basic Statistics.ipynb
+++ b/Notebooks/Basic Statistics.ipynb
@@ -5,7 +5,25 @@
    "metadata": {},
    "source": [
     "# Basic Statistics\n",
-    "This notebook contains basic statistics regarding the datasets."
+    "\n",
+    "## The idea\n",
+    "We decided that we wanted to get a better idea of what our data looked like and see what it had to offer. At the same time we wanted to allow interested readers to see the different aspects of the movie industry through visualization of our data. We also wanted to use this as an opportunity to try and figure out which parts of the data are useful in our recommendation engine.\n",
+    "\n",
+    "**Some things we looked at:**\n",
+    "\n",
+    " - IMDb rating distribution\n",
+    " - TMDb rating vs budget\n",
+    " - Movie’s popularity vs it’s release month\n",
+    " - Correlation between a movie’s revenue and it’s budget\n",
+    " - Correlation between a movie cast’s gender ratio and a movie’s revenue\n",
+    " - Correlation between 9 aspects of a movie using a heatmap\n",
+    " - Movie genres, number of movies in each, their average IMDb rating and their revenue\n",
+    " - Biggest production companies in our dataset\n",
+    " - Number of movies produced each year as well as the movie revenue per year\n",
+    " - Keywords analysis, both frequency histogram and word cloud representation for each genre\n",
+    " Stats about the cast and crew of the movies\n",
+    " - Similarities between movies’ storylines\n",
+    "\n"
    ]
   },
   {
